/**

@page changes Release Notes

@htmlonly <a name="v6_0_1_changes"></a>@endhtmlonly
@par
<B>Version 6.0.1</B> - <I>In development</I>

@par
Bug fixes:
- Fixed a bug in the @link tools/Clip.h clip@endlink tool that caused
  some grid metadata to be discarded.


@htmlonly <a name="v6_0_0_changes"></a>@endhtmlonly
@par
<B>Version 6.0.0</B> - <I>December 18, 2018</I>

@par
<BLOCKQUOTE>
Some changes in this release (see @ref v6_0_0_ABI_changes "ABI changes" below)
alter the grid&nbsp;ABI so that it is incompatible with earlier versions of
the OpenVDB library, such as the ones built into Houdini up to and including
Houdini&nbsp;17.
To preserve ABI compatibility, when compiling OpenVDB or any dependent code
define the macro <TT>OPENVDB_ABI_VERSION_NUMBER=</TT><I>N</I>, where,
for example, <I>N</I> is 3 for Houdini&nbsp;15, 15.5 and&nbsp;16,
4 for Houdini&nbsp;16.5 and 5 for Houdini&nbsp;17.0.
</BLOCKQUOTE>

@par
New features:
- Added support to the
  @link ParticlesToLevelSet.h ParticlesToLevelSet@endlink tool
  for fast rasterization of particles into boolean mask grids.
- Added convenience functions
  @vdblink::tools::particlesToSdf() particlesToSdf@endlink,
  @vdblink::tools::particleTrailsToSdf() particleTrailsToSdf@endlink,
  @vdblink::tools::particlesToMask() particlesToMask@endlink
  and @vdblink::tools::particleTrailsToMask() particleTrailsToMask@endlink
  for common particle rasterization use cases.
- Added batch copying functions @vdblink::points::AttributeArray::copyValues()
  AttributeArray::copyValues@endlink and
  @vdblink::points::AttributeArray::copyValuesUnsafe()
  AttributeArray::copyValuesUnsafe@endlink that significantly outperform
  the older @vdblink::points::AttributeArray::set()
  AttributeArray::set@endlink method.

@par
Improvements:
- Improved the responsiveness of the
  @link MeshToVolume.h mesh to volume@endlink converter to interrupt requests.
- Attempts to use a partially deserialized