@@ -10,6 +10,15 @@
 Bug fixes:
 - Fixed a bug in the @link tools/Clip.h clip@endlink tool that caused
   some grid metadata to be discarded.
+- Added a check to @vdblink::points::setGroup() points::setGroup@endlink
+  to compare the maximum index of the provided
+  @vdblink::tools::PointIndexTree PointIndexTree@endlink
+  to the size of the membership vector.
+
+@par
+Houdini:
+- The Points&nbsp;Convert SOP now reports NaN Positions as warnings when
+  converting from Houdini Points to VDB Points.
 
 
 @htmlonly <a name="v6_0_0_changes"></a>@endhtmlonly
